Added favorite endpoint with some swagger fixes
